--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -9,7 +9,90 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <style>
+/***** Styling for checkout form *****/
 
+h3 {
+    font-family: "Segoe UI",Arial,sans-serif;
+    font-weight: 400;
+}
+
+  .row {
+  display: -ms-flexbox; /* IE10 */
+  display: flex;
+  -ms-flex-wrap: wrap; /* IE10 */
+  flex-wrap: wrap;
+  margin: 0 -16px;
+}
+
+.col-25 {
+  -ms-flex: 25%; /* IE10 */
+  flex: 25%;
+}
+
+.col-50 {
+  -ms-flex: 50%; /* IE10 */
+  flex: 50%;
+}
+
+.col-75 {
+  -ms-flex: 75%; /* IE10 */
+  flex: 75%;
+}
+
+.col-25,
+.col-50,
+.col-75 {
+  padding: 0 16px;
+}
+
+.container-form {
+  background-color: #f2f2f2;
+  padding: 5px 20px 15px 20px;
+  border: 1px solid lightgrey;
+  border-radius: 3px;
+  margin-left: 200px;
+  margin-right: 200px;
+}
+
+input[type=text] {
+  width: 100%;
+  margin-bottom: 20px;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+
+label {
+  margin-bottom: 10px;
+  display: block;
+}
+
+.icon-container {
+  margin-bottom: 20px;
+  padding: 7px 0;
+  font-size: 24px;
+}
+
+.btn {
+  background-color: #04AA6D;
+  color: white;
+  padding: 12px;
+  margin: 10px 0;
+  border: none;
+  width: 100%;
+  border-radius: 3px;
+  cursor: pointer;
+  font-size: 17px;
+}
+
+.btn:hover {
+  background-color: #45a049;
+}
+
+span.price {
+  float: right;
+  color: grey;
+}
   </style>
 </head>
 <body>
@@ -80,7 +163,7 @@
   </div>
 </nav>
 
-<!-- Checkout-formulär -->
+<!-- Checkout form -->
 
 <div class="row">
   <div class="col-75">
@@ -95,12 +178,12 @@
           <b>4</b>
         </span>
             </h4>
-            <p><a href="#">Product 1</a> <span class="price">$15</span></p>
-            <p><a href="#">Product 2</a> <span class="price">$5</span></p>
-            <p><a href="#">Product 3</a> <span class="price">$8</span></p>
-            <p><a href="#">Product 4</a> <span class="price">$2</span></p>
+            <p><a href="#">Product 1</a> <span class="price">200 kr</span></p>
+            <p><a href="#">Product 2</a> <span class="price">99 kr</span></p>
+            <p><a href="#">Product 3</a> <span class="price">149 kr</span></p>
+            <p><a href="#">Product 4</a> <span class="price">25 kr</span></p>
             <hr>
-            <p>Totalsumma <span class="price" style="color:black"><b>$30</b></span></p>
+            <p>Totalsumma <span class="price" style="color:black"><b>473 kr</b></span></p>
           </div>
         </div>
 
@@ -116,8 +199,8 @@
 
             <div class="row">
               <div class="col-50">
-                <label for="postnummer">Postnummer</label>
-                <input type="text" id="postnummer" name="postnummer" placeholder="12345">
+                <label for="postnum">Postnummer</label>
+                <input type="text" id="postnum" name="postnum" placeholder="12345">
               </div>
               <div class="col-50">
                 <label for="ort">Ort</label>
@@ -128,17 +211,17 @@
 
           <div class="col-50">
             <h3>Betalning</h3>
-            <label for="cname">Kortnamn</label>
+            <label for="cname">Namn på betalkort</label>
             <input type="text" id="cname" name="cardname" placeholder="Namn Namnsson">
             <label for="ccnum">Kortnummer</label>
             <input type="text" id="ccnum" name="cardnumber" placeholder="1111-2222-3333-4444">
-            <label for="expmonth">Utgångsmånad</label>
-            <input type="text" id="expmonth" name="expmonth" placeholder="Oktober">
+            <label for="expmonth">Giltighetstid månad</label>
+            <input type="text" id="expmonth" name="expmonth" placeholder="MM">
 
             <div class="row">
               <div class="col-50">
-                <label for="expyear">Utgångsår </label>
-                <input type="text" id="expyear" name="expyear" placeholder="2022">
+                <label for="expyear">Giltighetstid år </label>
+                <input type="text" id="expyear" name="expyear" placeholder="YY">
               </div>
               <div class="col-50">
                 <label for="cvc">CVC</label>
@@ -157,6 +240,7 @@
 </div>
 
 
+<!-- Footer -->
 <footer class="container-fluid text-center">
   <p>Bli en återvinnare!</p>
   <form class="form-inline">Anmäl dig till vårt nyhetsbrev:
