--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -183,14 +183,19 @@ span.price {
           <b>4</b>
         </span>
       </h4>
-      <p><a href="#">Product 1</a> <span class="price">200 kr</span></p>
+      <p><span class="">Product 1</span> <span class="price">200 kr</span></p>
       <p><a href="#">Product 2</a> <span class="price">99 kr</span></p>
       <p><a href="#">Product 3</a> <span class="price">149 kr</span></p>
       <p><a href="#">Product 4</a> <span class="price">25 kr</span></p>
+
+      <hr>
+      <label for="discount">Lägg till rabattkod: <input type="text" id="discount" name="discount" placeholder=""></label>
+
       <hr>
       <p>Totalsumma <span class="price" style="color:black"><b>473 kr</b></span></p>
     </div>
   </div>
+
 
   <div class="col-75">
     <div class="container-form">
@@ -238,6 +243,7 @@ span.price {
               </div>
             </div>
           </div>
+
 
         </div>
         <input type="submit" value="Bekräfta köp" class="btn" style="background-color:#257D5E">
