--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -116,7 +116,7 @@
       <h2><th th:text="${product.name}"></th></h2>
       <h3><th th:text="${product.price} + ' kr'"></th></h3>
       <h4><th th:text="${product.description}"></th></h4>
-      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" onclick="addProduct([[${product.id}]],[[${product.name}]],[[${product.price}]])">
+      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" th:onclick="addProduct([[${product.id}]],[[${product.name}]],[[${product.price}]])">
         Köp
       </button>
 
