--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -99,6 +99,7 @@ footer {
 /* Product counter (cartsymbol) */
 .productcounter {
     color: #FFDD5C;
+
 }
 
 /* Carousel */
@@ -303,8 +304,14 @@ tr.spaceOver>td {
 }
 
 @keyframes zoom-in-zoom-out {
+
+
   0% {
-    transform: scale(1, 1);
+  transform: rotate(0);
+  transform: rotate(90deg);
+  transform: rotate(180deg);
+  transform: rotate(360deg);
+  transform: scale(1, 1);
   }
     10% {
       transform: scale(1.1, 1.1);
