--- a/src/main/resources/templates/AboutUs/AboutUs.html
+++ b/src/main/resources/templates/AboutUs/AboutUs.html
@@ -100,10 +100,8 @@
 </div><br><br>
 
 
-
-
 <!-- Footer -->
-<footer class="container-fluid text-center">
+<footer class="container-fluid text-center" style="bottom:auto;">
   <p>Bli en återvinnare!</p>
   <form class="form-inline">Anmäl dig till vårt nyhetsbrev:
     <input type="email" class="form-control" size="50" placeholder="Mejladress">
