--- a/src/main/resources/templates/newuser.html
+++ b/src/main/resources/templates/newuser.html
@@ -45,9 +45,6 @@
     </div>
 </div>
 
-<!--<div th:text="${'Inloggad som: ' + session?.siteuser?.username}"></div>-->
-<span class="logintxt">Inloggad som:<span th:text="${session?.siteuser?.username} ?: ' (Inte inloggad)'"></span></span>
-
 <!-- Navbar -->
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
@@ -113,82 +110,14 @@
     </div>
 </nav>
 
-<!--Carousel -->
-<div class="container">
-    <h2>Tips inför Halloween!</h2>
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
-
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner">
-
-            <div class="item active">
-                <img src="/images/skelett.png" alt="Halloween-dekoration: skelett" onclick="location.href='/product/7'">
-                <div class="carousel-caption">
-                    <!-- Space for description on image-->
-                </div>
-            </div>
-
-            <div class="item">
-                <img src="/images/pumpalykta.png" alt="Halloween-dekoration: värmeljuslykta" onclick="location.href='/product/6'">
-                <div class="carousel-caption">
-                    <!-- Space for description on image-->
-                </div>
-            </div>
-
-            <div class="item">
-                <img src="/images/halloweenhaxa.png" alt="Halloween-dekoration: häxa" onclick="location.href='/product/5'">
-                <div class="carousel-caption">
-                    <!-- Space for description on image-->
-                </div>
-            </div>
-
-        </div>
-
-
-        <!-- Left and right controls -->
-        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
-</div>
-<br>
-
-<!-- Product listing -->
-<div class="container">
-    <div class="row">
-        <div class="productlisting" th:each="product : ${products}">
-            <div class="col-sm-4">
-                <div class="panel panel-primary stretched-link" id="productpanel">
-
-                    <div class="panel-heading" th:text="${product.name}" th:onclick="'location.href=\'/product/' + ${product.id} + '\''"></div>
-
-                    <div class="panel-body">
-                        <img th:src="${product.image}" class="img-responsive" alt="Image" id="productimg"
-                        th:onclick="'location.href=\'/product/' + ${product.id} + '\''"> <!--th:onclick="|window.location.href='/product/' + '${product.id}'|"-->
-
-                    </div>
-
-                    <div class="panel-footer" th:text="'Pris: ' + ${product.price} + ' kr'"></div>
-
-                    <a class="btn btn-primary " th:href="'/product/' + ${product.id}" >Mer info</a>
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" th:onclick="addProduct([[${product.id}]],[[${product.name}]],[[${product.price}]])">Köp
-                    </button>
-                </div>
-            </div>
-        </div>
-    </div>
-</div><br><br>
+<!-- New user -->
+<form action="/newuser" method="POST" th:object="${user}">
+    <table><div>
+        <th class="userInput"> Användarnamn: <input type="text" th:field="*{username}"/>
+        <th class="userInput"> Lösenord:     <input type="password" th:field="*{password}"/>
+        <th class="userInput"> <input type="submit"/></th>
+    </div></table>
+</form>
 
 <!-- Footer -->
 <footer class="container-fluid text-center">
