--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -72,8 +72,8 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Mitt konto</a></li>
-        <li><span id="cartsum" class="productsummation productcounter">0</span></li>
+        <li><a href="/login"><span class="glyphicon glyphicon-user"></span> Mitt konto</a></li>
+        <li><a><span id="cartsum" class="productsummation productcounter">0</span></a></li>
         <li><a href="/cart"><span class="glyphicon glyphicon-shopping-cart"></span> Varukorg</a></li>
       </ul>
     </div>
