--- a/src/main/resources/templates/Books/allBooks.html
+++ b/src/main/resources/templates/Books/allBooks.html
@@ -49,6 +49,7 @@
 
 <!-- Navbar -->
 <nav class="navbar navbar-inverse">
+    <span class="loginstatus">Inloggad som:<span th:text="${session?.siteuser?.username} ?: ' (Inte inloggad)'"></span></span>
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
