--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -130,7 +130,7 @@
         <div class="container-fluid text-center">
             <p>Bli en återvinnare! <br> Anmäl dig till vårt nyhetsbrev: </p>
             <form class="form-inline"><input type="email" class="form-control" size="50" placeholder="E-postadress">
-                <button type="button" class="btn btn-danger" id="footerbtn" >Skicka</button>
+                <button type="button" class="btn btn-danger" id="footerbtn" data-toggle="modal" data-target="#newsletterModal">Skicka</button>
             </form>
         </div>
         <div class="footer-right">
