--- a/src/main/resources/templates/Books/allBooks.html
+++ b/src/main/resources/templates/Books/allBooks.html
@@ -43,7 +43,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title" id="newsletterModalLabel"> Grattis! Du prenumererar nu på ShoppisLoppis nyhetsbrev! </h4>
+                <h4 class="modal-title" id="newsletterModalLabel"> Grattis! Du prenumererar nu på LoppisShoppis nyhetsbrev! </h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -67,8 +67,6 @@
         <img onclick="location.href='/';" src="/images/loppisshoppis3.png" height="300">
     </div>
 </div>
-
-<span class="logintxt">Inloggad som:<span th:text="${session?.siteuser?.username} ?: ' (Inte inloggad)'"></span></span>
 
 <!-- Navbar -->
 <nav class="navbar navbar-inverse">
