--- a/src/main/resources/templates/Books/childrensBooks.html
+++ b/src/main/resources/templates/Books/childrensBooks.html
@@ -43,7 +43,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title" id="newsletterModalLabel"> Grattis! Du prenumererar nu på ShoppisLoppis nyhetsbrev! </h4>
+        <h4 class="modal-title" id="newsletterModalLabel"> Grattis! Du prenumererar nu på LoppisShoppis nyhetsbrev! </h4>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -146,7 +146,8 @@
           <div class="panel-footer" th:text="'Pris: ' + ${product.price} + ' kr'"></div>
           <a class="btn btn-primary " th:href="'/product/' + ${product.id}">Mer info</a>
 
-          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" th:onclick="addProduct([[${product.id}]],[[${product.name}]],[[${product.price}]])">
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"
+                  th:onclick="addProduct([[${product.id}]],[[${product.name}]],[[${product.price}]])">
             Köp
           </button>
         </div>
