--- a/src/main/resources/templates/frontpage.html
+++ b/src/main/resources/templates/frontpage.html
@@ -43,7 +43,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title" id="newsletterModalLabel"> Grattis! Du prenumererar nu på ShoppisLoppis nyhetsbrev! </h4>
+                <h4 class="modal-title" id="newsletterModalLabel"> Grattis! Du prenumererar nu på LoppisShoppis nyhetsbrev! </h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
