--- a/src/main/resources/templates/frontpage.html
+++ b/src/main/resources/templates/frontpage.html
@@ -134,12 +134,13 @@
 <!--Carousel -->
 <div class="container">
     <h2>Tips inför Halloween!</h2>
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="2000">
         <!-- Indicators -->
         <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#myCarousel" data-slide-to="1"></li>
             <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
         </ol>
 
         <!-- Wrapper for slides -->
@@ -147,6 +148,13 @@
 
             <div class="item active">
                 <img src="/images/skelett.png" alt="Halloween-dekoration: skelett" onclick="location.href='/product/7'">
+                <div class="carousel-caption">
+                    <!-- Space for description on image-->
+                </div>
+            </div>
+
+            <div class="item">
+                <img src="/images/spoke.jpg" alt="Halloween-dekoration: spöke" onclick="location.href='/product/8'">
                 <div class="carousel-caption">
                     <!-- Space for description on image-->
                 </div>
