--- a/src/main/resources/templates/Hobby/hobbiesAndGames.html
+++ b/src/main/resources/templates/Hobby/hobbiesAndGames.html
@@ -65,7 +65,7 @@
 <!-- Header with logo -->
 <div class="jumbotron">
   <div class="container text-center">
-    <img onclick="location.href='/';" src="/images/loppisshoppis3.png" height="300">
+    <img onclick="location.href='/';" src="/images/loppisshoppis3.png" class="img-responsive">
   </div>
 </div>
 
