--- a/src/main/resources/templates/frontpage.html
+++ b/src/main/resources/templates/frontpage.html
@@ -64,7 +64,7 @@
 <!-- Header with logo -->
 <div class="jumbotron">
     <div class="container text-center">
-        <img onclick="location.href='/';" src="/images/loppisshoppis3.png" height="300" class="img-responsive">
+        <img onclick="location.href='/';" src="/images/loppisshoppis3.png" class="img-responsive">
     </div>
 </div>
 
