--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -472,6 +472,58 @@ tr.spaceOver>td {
     font-weight: bold;
 }
 
-.font-weight-bold{
+#myInput{
+    text-align: center;
     font-weight: bold;
+    position: relative;
+    style=justify-items: center;
+}
+
+.zoom-in-out2-box:hover{
+  margin: 24px;
+  width: auto;
+  height: 50px;
+  animation: zoom-in-zoom-out2 50s ease infinite;
+
+}
+
+@keyframes zoom-in-zoom-out2 {
+0% {
+  transform: rotate(0);
+  transform: rotate(90deg);
+  transform: rotate(180deg);
+  transform: rotate(360deg);
+  transform: scale(1, 1);
+  }
+    10% {
+      transform: scale(1.1, 1.1);
+    }
+
+    20% {
+    transform: scale(1.2, 1.2);
+  }
+   30% {
+      transform: scale(1.3, 1.3);
+    }
+    40% {
+          transform: scale(1.4, 1.4);
+        }
+  50% {
+    transform: scale(1.5, 1.5);
+  }
+  60% {
+      transform: scale(1.6, 1.6);
+    }
+  70% {
+    transform: scale(1.7, 1.7);
+  }
+  80% {
+      transform: scale(1.8, 1.8);
+    }
+    90% {
+          transform: scale(1.9, 1.9);
+        }
+  100% {
+    transform: scale(2, 2);
+  }
 }
